data/derived/comb/progs/unify/prog8477.ml.out
Characters 150-153:
  | Sine sin -> Printf.printf ("sin(pi*"^ sin^")" );
                                          ^^^
Error: This expression has type expr but an expression was expected of type
         string
